sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: reassignment to val
		pos=pos+1
                   ^AlgGnomeSort:8: error: not found: value i
		echange(i,i+1)
                        ^AlgGnomeSort:9: error: reassignment to val
		pos=pos-1
                   ^AlgGnomeSort:11: error: reassignment to val
		pos=pos+1
                   ^