sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
val pos:Int=0
while (pos!=getNombreValeurs-1) {
	if (pos==0) {
		pos=pos+1
	} else if(getValeur(pos+1)<getValeur(pos)) {
		echange(i,i+1)
		pos=pos-1
	} else {
		pos=pos+1
	}
	
}
}
